--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -28,6 +28,13 @@
   }
 }
 
+.bg-gradient {
+  background-image: radial-gradient(circle at 100% -80%, rgb(254, 242, 244), rgb(253, 248, 247), rgb(255, 242, 230), rgb(229, 246, 234), rgb(223, 245, 250), rgb(227, 239, 250), rgb(231, 233, 250));
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 .checkmark__circle {
   stroke-dasharray: 166;
   stroke-dashoffset: 166;
